# BrickellQuant

./: README.md  extract_swarm_prompts.py  pyproject.toml
.swarm/: project_memory.db
.swarm/workflow-logs/20260320-002652_financeforge/: config.yaml
.swarm/workflow-logs/20260320-003512_financeforge/: config.yaml
.swarm/workflow-logs/20260320-004014_financeforge/: config.yaml
system-prompts/: FinanceForgev2.md  FinanceGPTv1.md
tools/: AGENT_README.md  SKILL.md  __init__.py  requirements.txt
tools/Yodel/: README.md  __init__.py  yodel_client.py
tools/Yodel/1-browser/: cloak_launch.py  godel_browser.py  interactive_launch.py  launch.py  manual_stealth.py  simple_launch.py  stealth_context.py  stealth_launch.py  ultra_stealth.py
tools/Yodel/2-setup/: extract_js_bundles.py  fetch_all_chunks.py  live_api_scanner.py
tools/Yodel/examples/: __init__.py  yodel_examples.py
tools/autopilot/: __init__.py  client.py  db.py  models.py  scraper.py
tools/autopilot/examples/: __init__.py
tools/dcf/: __init__.py  dcf_engine.py
tools/global_data/: __init__.py  global_client.py
tools/macro/: __init__.py  macro_client.py
tools/market/: README.md  __init__.py  market_client.py
tools/market/examples/: market_examples.py
tools/news/: README.md  __init__.py  news_client.py
tools/news/examples/: news_examples.py
tools/sec/: README.md  __init__.py  sec_client.py
tools/sentiment/: __init__.py  sentiment_client.py
tools/transcripts/: __init__.py  transcript_client.py
tools/utils/: __init__.py  cache.py  formatters.py  types.py
workflows/: financeforge.yaml
workflows/FinanceForge/: ACE-CONTEXT-SCHEMA.md  WORKFLOW.md
(+71 files in other folders)
