[project]
name = "brickellquant"
version = "0.2.0"
description = "Agent-first financial data library — SEC EDGAR, market data, news, sentiment, macro, transcripts, DCF"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # ── Core data ──────────────────────────────────────────────────────
    "edgartools>=2.0",
    "yfinance>=0.2.38",
    "feedparser>=6.0",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "python-dateutil>=2.8",
    "requests>=2.28",
    # ── Sentiment ──────────────────────────────────────────────────────
    "praw>=7.7", # Reddit API (free, needs app credentials)
    "pytrends>=4.9", # Google Trends (free, no key)
    # ── Macro ──────────────────────────────────────────────────────────
    "fredapi>=0.5", # FRED Federal Reserve data (free API key)
    "pandas-datareader>=0.10",
    # ── Output / formatting ────────────────────────────────────────────
    "rich>=13.0",
    "tabulate>=0.9",
    # ── Caching ────────────────────────────────────────────────────────
    "diskcache>=5.6",
    # ── Utilities ──────────────────────────────────────────────────────
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "typing-extensions>=4.0",
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.2",
    "cloakbrowser>=0.3.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ipython>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "ipython>=8.0",
]
